Added movement tests to Mini